Versions/V12/README.md
# Command and Control Server - Version 12 (Warning - This README file is not updated to the Version 12.Will be updated in future.)

## Table of Contents
- [1. Client](#1-client)
- [2. Server](#2-server)
- [3. Reverse Proxy](#3-reverse-proxy)

## 1. Client

The following modifications to the **client** reflect enhancements made from its previous version , **Version 10**.

| Change Type | Description |
|-------------|-------------|
| **Updated** | Added RFC 3526 compliant DHKE mechanism for key derivation |
| **Updated** | Minor encryption tweaks |
| **Updated** | Encryption libraries require static compiling, hence attached command and executables (if required) |


## 2. Server 

The following modifications to the **server** reflect enhancements made from its previous version , **Version 10**.

| Change Type | Description |
|-------------|-------------|
| **Updated** | Added RFC 3562 compliant DHKE mechanism for key derivation |
| **Updated** | Fixed table display issue present in V10 by using dynamic tables |

## 3. Reverse Proxy 

There were no changes made to the **reverse proxy** from its previous version , **Version 10**.
